--- a/Sign_up_page/Sign_up.css
+++ b/Sign_up_page/Sign_up.css
@@ -54,6 +54,7 @@ input[type="password"] {
     font-family: 'Noto Sans KR', sans-serif;
     font-weight: bold;
     color: #fff;
+    outline: none;
 }
 input:focus{
     outline: 2px solid #F5B50B;
