--- a/email_check/email_check.css
+++ b/email_check/email_check.css
@@ -15,16 +15,22 @@
 }
 .container{
     width: 462px;
-    height: 288px;
+    height: 342px;
     margin: 39px auto;
     padding: 65px;
     background-color: #fff;
     border-radius: 9px;
     box-shadow: 0px 15px 55px rgba(0, 0, 0, 0.15);
+    
 }
 label{
-    font-size: 14px;
+    font-size: 24px;
     font-family: 'Noto Sans KR', sans-serif;
+    color: #F59C19;
+    font-weight: 600;
+    display: block; /* 블록 요소로 변경 */
+    margin-bottom: 42px; /* 아래 여백 추가 */
+
 
 }
 input[type="text"],
@@ -36,10 +42,12 @@ input[type="password"] {
     border-radius: 5px;
     margin-bottom: 30px;
     background-color: rgba(241, 241, 241, 1);
+    display: block; /* 블록 요소로 변경 */
+    margin: 0 auto 30px; /* 좌우 중앙정렬 후 아래쪽 여백 추가 */
 
 
 }
-.Sign_in_btn{
+.email_check_btn{
     margin-top: 0px;
     width: 100%;
     padding: 15px;
@@ -48,19 +56,15 @@ input[type="password"] {
     background: linear-gradient(223.17deg, #F5B50B 0%, #F57431 100%);
     font-size: 16px;
     font-family: 'Noto Sans KR', sans-serif;
-    font-weight: bold;
+    font-weight: 700;
     color: #fff;
-    margin-top: 30px;
+    margin-top: 70px;
 }
 input:focus{
     outline: 2px solid #F5B50B;
 }
-.Sign_in_btn:focus{
+.email_check_btn:focus{
     outline: none;
-}
-::placeholder{
-    font-size: 14px;
-    color: rgba(208, 208, 208, 1);
 }
 .elucidation{
     text-align: center;
@@ -72,32 +76,38 @@ input:focus{
     text-decoration: none;
     color: rgba(245, 156, 25, 1);
 }
-.tag_box{
-    width: 384px;
-    height: 36px;
-    margin: auto;
-    border-radius: 10px;
-    border:2px solid #E1E1E1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 30px;
-  }
-  
-  ul {
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 25px;
-  }
-  
-  li {
-    padding-bottom: 3px;
-    font-size: 12px;
-    font-family: 'Noto Sans KR', sans-serif;
-  }
 a{
     text-decoration: none;
     color:rgba(245, 156, 25, 1);
+}
+
+
+  .input-container {
+    display: flex; 
+    justify-content: space-between;  /* 플렉스를 활용해서 네모들의 간격 넓힘 */
+  }
+  
+  .input-container input {
+    width: 34px;
+    height: 39px;
+    border: 1px solid #ddd;
+    text-align: center;
+    font-size: 24px;
+    
+  }
+  
+  .input-container input:focus {
+    outline: none;
+    border-color: #bbb;
+  }
+  
+  .input-container input:nth-child(1) { 
+    margin-left: 0; /* 첫번째 요소에 마진을 안줌 */
+  }
+  
+  .input-container input:not(:first-child) {
+    margin-left: 25px; /* 첫번째 요소가 아닌 다음 요소부터 마진을 25px씩 준다 */
+  }
+form{
+ text-align: center;
 }
