--- a/Question page/Question_page.css
+++ b/Question page/Question_page.css
@@ -1,80 +1,148 @@
 body{
     margin: 0;
 }
-.logo_font{
-    font-family: 'Noto Sans KR', sans-serif;
-    font-size: 24px;   
-    font-weight: 400;
-    margin-right: 830px;
-}
-.logo_top_bar{
+ul{
     width: 100%;
-    background-color: black;
-    height: 100px;
+    background: linear-gradient(223.17deg, #F5B50B 0%, #F57431 100%);
+    height: 50px;
     margin: 0;
     padding: 0;
-    background: linear-gradient(223.17deg, #F5B50B 0%, #F57431 100%);
 }
-.top_bar{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background: linear-gradient(223.17deg, #F5B50B 0%, #F57431 100%);
-    width: 100%;
-    height: 100px;
-
+.header_left{
+    float: left;
+    padding-left: 311px;
+    width: 30%;
+    height: 50px;
 }
-.logo_size{
-    width: 22.98px;
-    height: 25px;
-    margin-left: 311px;
-}
-li{
+.header_right{
     float: right;
-    list-style: none;
-}
+    padding-right: 115px;
+} 
+  nav li {
+    font-family: 'Noto Sans KR', sans-serif;
+    display: inline-block;
+  }
 
-.Questions_move{
-    font-family: 'Noto Sans KR', sans-serif;
-    font-weight: 600;
-    font-size: 21px;
-    color: rgb(255, 255, 255);
-    margin-right: 18px;
-}
-.user_name_btn{
-    width: 100px;
-    height: 38px;
-    border-radius: 15px;
-    font-family: 'Noto Sans KR', sans-serif;
-    font-weight: 600;
-    font-size: 12px;
-    border: 1px solid rgb(255, 255, 255);
-    background-color:transparent;
-    margin-right:115px ;
-    cursor: pointer;
-}
-a{
+.big_logo_font{
+    font-weight: 400;
+    font-size: 24px;
+    color: white;
     text-decoration: none;
-    outline: none;
+    line-height: 32.69px;
+
+}
+.mini_font{
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 19.07px;
+    text-decoration: none;
     color: white;
 }
+.logo_img{
+    width: 22.98px;
+    height: 25px;
+    margin-top: 12px;
 
+}
+.menu_btn{
+    width: 67px;
+    height: 24px;
+    border-radius: 15px;
+    border: 1.5px solid white;
+    color: white;
+    background-color:transparent;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 16px;
+    margin-top: 13px;
+}
 .dropdown-content{
     display: none;
-    position: absolute;
-    background-color:#FFFFFF;
+    position: relative;
+    background-color: white;
     width: 175px;
-    height: 128.64;
-    border-radius: 9px;
-    
+    height: 135px;
 }
-.dropdown-content a{
+.dropdown_content_Question{
     color: black;
-    padding: 12px 14px;
+    padding: 20px 72px 10px 19px;
     text-decoration: none;
     display: block;
-    border-bottom: 1px solid #ddd;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 16.34px;
+}
+.dropdown_content_Answer{
+    color: black;
+    padding: 10px 81px 32px 19px;
+    text-decoration: none;
+    display: block;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 16.34px;
+}
+.dropdown_content_sign-out{
+    color: black;
+    padding: 0px 18px 17px 20px;
+    text-decoration: none;
+    display: block;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 16.34px;
+    border-top: 2px solid slateblue;
+}
+.sign_btn{
+    border-radius: 9px;
+    border: 1px solid rgba(235, 235, 235, 1);
+    width: 137px;
+    height: 24px;
+
 }
 .show{
     display: block;
+}
+.header_left li{
+    margin: 0 10px;
+}
+.header_right li{
+    margin: 0 18px;
+}
+.main_btn{
+    width: 915px;
+    height: 140px;
+    border: 2px solid rgba(235, 235, 235, 1);
+    position: relative;
+    display: block;
+    margin: auto ;
+    margin-top: 2%;
+    border-radius: 10px;
+
+}
+.All_Questions_font{
+    font-size: 32px;
+    font-weight: 600;
+    line-height: 43.58px;
+    font-family: 'Noto Sans KR', sans-serif;
+    color: rgba(245, 156, 25, 1);
+    margin: 0;
+    margin-top: 25px;
+    margin-left: 30px;
+}
+.Ask_Question_btn{
+    width: 91px;
+    height: 26px;
+    font-size: 12px;
+    font-weight: 600;
+    font-family: 'Noto Sans KR', sans-serif;
+    line-height: 16.34px;
+    margin: 0;
+    padding: 0;
+    float: right;
+    margin-bottom: 25px;
+    margin-right: 30px;
+    margin-top: 20px;
+    color: white;
+    background-color: #F59C19;
+    border: none;
+    border-radius: 5px;
 }
