--- a/Question page/Question_page.css
+++ b/Question page/Question_page.css
@@ -146,3 +146,19 @@ ul{
     border: none;
     border-radius: 5px;
 }
+.drodown{
+    position: relative;
+    display: inline-block;
+}
+.dropdown_btn{
+    width: 67px;
+    height: 24px;
+    border-radius: 15px;
+    border: 1px solid rgba(255, 255, 255, 1);
+    font-size: 12px;
+    line-height: 16.34px;
+    font-weight: 600;
+    font-family: 'Noto Sans KR', sans-serif;
+    color: white;
+    background-color: transparent;
+}
